# rustdown

./: .gitignore  AGENTS.md  Cargo.toml  README.md  test-nav.md
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  release.yml
crates/rustdown-cli/: Cargo.toml
crates/rustdown-cli/src/: main.rs
crates/rustdown-core/: Cargo.toml
crates/rustdown-core/src/: lib.rs  markdown.rs
crates/rustdown-gui/: Cargo.toml
crates/rustdown-gui/src/: app_actions.rs  app_panels.rs  app_scroll.rs  app_tests.rs  cli.rs  diagnostics.rs  disk_io.rs  disk_sync.rs  disk_watcher.rs  document.rs  editor.rs  format.rs  highlight.rs  live_merge.rs  main.rs  markdown_fence.rs  nav_debug.rs  nav_outline.rs  nav_panel.rs  preferences.rs  preview.rs  scroll_math.rs  search.rs  ui_style.rs
crates/rustdown-gui/src/bundled/: demo.md  verification.md
crates/rustdown-gui/src/disk/: io.rs  mod.rs  sync.rs  watcher.rs
crates/rustdown-gui/src/nav/: debug.rs  mod.rs  outline.rs  panel.rs
crates/rustdown-md/: Cargo.toml
crates/rustdown-md/src/: bench.rs  lib.rs  parse.rs  render.rs  stress.rs  style.rs
crates/rustdown-md/src/render/: blocks.rs  height.rs  layout.rs  lists.rs  mod.rs  table.rs  text.rs
crates/rustdown-md/src/render/tests/: diagnostics.rs  helpers.rs  integration.rs  mod.rs  rendering.rs
crates/rustdown-md/tests/: snapshot_tests.rs
test-assets/: mega-stress.md  stress-test.md
test-assets/visual-refs/: 01-headings.md  02-inline-styles.md  03-links.md  04-blockquotes.md  05-lists.md  06-code-blocks.md  07-tables.md  08-horizontal-rules.md  09-images.md  10-mixed-content.md  11-smart-punctuation.md  README.md
