[workspace]
resolver = "3"
members = [
  "crates/rustdown-gui",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "MIT"
repository = "https://github.com/teh-hippo/rustdown"
rust-version = "1.93"

[workspace.lints.rust]
unsafe_code = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"
panic = "deny"

[profile.release]
# Standard size optimizations for distribution binaries.
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"
