[package]
name = "rustdown-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
rustdown-core = { path = "../rustdown-core" }
