[package]
name = "rustdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eframe = { version = "0.31", default-features = false, features = [
  "glow",
] }
egui_commonmark = { version = "0.20.0", default-features = false, features = ["pulldown_cmark", "load-images"] }
pulldown-cmark = "0.12"
memchr = "2"
rfd = { version = "0.15", default-features = false }
imara-diff = { version = "0.2.0", default-features = false }
notify = { version = "8.0.0", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.31", default-features = false, features = [
  "glow",
  "wayland",
  "x11",
] }
rfd = { version = "0.15", default-features = false, features = ["gtk3"] }
