[package]
name = "rustdown"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
eframe = { version = "0.33", default-features = false, features = [
  "glow",
] }
egui_extras = { version = "0.33", default-features = false, features = ["image"] }
rustdown-md = { path = "../rustdown-md" }
pulldown-cmark = { version = "0.13", default-features = false }
memchr = "2"
rfd = { version = "0.17", default-features = false }
imara-diff = { version = "0.2.0", default-features = false }
notify = { version = "8.0.0", default-features = false }
dirs = "6"
toml = { version = "0.8", default-features = false, features = ["parse", "display"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[target.'cfg(target_os = "linux")'.dependencies]
eframe = { version = "0.33", default-features = false, features = [
  "glow",
  "wayland",
  "x11",
] }
libloading = "0.9"
rfd = { version = "0.17", default-features = false, features = ["gtk3"] }
