[package]
name = "rustdown-md"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
egui = { version = "0.33", default-features = false }
memchr = "2"
pulldown-cmark = { version = "0.13", default-features = false }
